src2/objects/Action_allowed_by_Profile__mdt.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allow__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Allow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <label>Profile Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Action allowed by Profile</label>
    <pluralLabel>Actions allowed by Profile</pluralLabel>
</CustomObject>